--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buy Box</title>
+    <script type="module" crossorigin src="/Talent-Fest-Latam/assets/index.821be06c.js"></script>
+    <link rel="stylesheet" href="/Talent-Fest-Latam/assets/index.01facf79.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
